[package]
name = "hmac-drbg"
version = "0.3.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Pure Rust implementation of Hmac DRBG."
license = "Apache-2.0"
edition = "2018"

[dependencies]
digest = "0.10.7"
generic-array = "0.14.7"
hmac = "0.12.1"

[dev-dependencies]
sha2 = "0.10.8"
hex = "0.4.3"
typenum = "1.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
